Third commit: Changed according to the new suggestions of teacher

--- a/templates/ar.html
+++ b/templates/ar.html
@@ -3,8 +3,8 @@
         <title>AR Page</title>
     </head>
 
-    <body bgcolor="Snow" link="tomato" vlink="tomato" alink="tomato">
-        <font face="Verdana">
+    <body bgcolor="PaleTurquoise" link="DarkBlue" vlink="DarkBlue" alink="DarkBlue">
+        <font face="Tw Cen MT" color="FireBrick" size="5">
 
             <center>
                 <h1>Augmented Reality</h1>
@@ -45,10 +45,8 @@
                 </ul>
 
             </p>
-
-            <p><a href="./vr.html">Next page (Virtual Reality)</a></p>
-            
-            <p><a href="./home.html">Previous page (Home Page)</a></p>
+            <br>
+            <p><a href="./home.html">Back to home page</a></p>
 
         </font>
     </body>
