--- a/templates/home.html
+++ b/templates/home.html
@@ -3,8 +3,8 @@
         <title>Digital Realities</title>
     </head>
 
-    <body bgcolor="Snow" link="tomato" vlink="tomato" alink="tomato">
-        <font face="Verdana">
+    <body bgcolor="PaleTurquoise" link="DarkBlue" vlink="DarkBlue" alink="DarkBlue">
+        <font face="Tw Cen MT" color="FireBrick" size="5">
 
             <center>
                 <h1>Digital Reality with Immersive Experience</h1>
@@ -29,22 +29,21 @@
             <p>Augmented Reality is a combination of the real world and certain digital elements. The most well-known example of AR is certainly the mobile game Pokemon Go. This is where objects are placed according to GPS or geolocated co-ordinates. However increasingly we are seeing AR been used to overlay additional moving content to static flat content. For example we recently worked with Unilever to bring an internal poster campaign to life by having animations that sat behind the posters and which were activated by holding the phone over the images. The AR overlay also enabled to viewer to visit specific internal websites which were accessible by an AR click through button. Simple but effective and also very measurable via back end analytics.</p>
             <p><a href="./ar.html">Click here to learn more</a></p>
 
-            <br><br>
+            <br>
             <h3>Virtual Reality (VR):</h3>
             <p>When we talk about Virtual Reality, we are describing a fully constructed CGI digital world into which you place the user and which they can interact with. All of the contents of the world are man-made and rendered as needed. When we talk about Virtual Reality, we are describing a fully constructed CGI digital world into which you place the user and which they can interact with. All of the contents of the world are man-made and rendered as needed.</p>
             <p><a href="./vr.html">Click here to learn more</a></p>
 
-            <br><br>
+            <br>
             <h3>Mixed Reality (MR):</h3>
             <p>Mixed Reality (MR) is somewhat a combination of AR and VR. Like VR, MR also uses an HMD. Unlike VR, however, a user is not shut out from the rest of the world. Instead, the HMD is more like a pair of glasses that overlays digital images on top of your environment (just like AR). Because of this, MR is sometimes called AR 2.0. An MR headset that is currently available to the market is the Microsoft Hololens. This takes “extending reality” to the next level and as Mixed Reality continues to evolve, we might just be looking into a future where desktops and laptops are no longer a thing and all of our computer work is done with the help of an MR headset.</p>
             <p><a href="./mr.html">Click here to learn more</a></p>
 
-            <br><br><br><br>
-            <p link="Brown" vlink="Brown" alink="Brown"><a href="./ar.html" >Next page (Augmented Reality)</a></p>
-
+            <br>
+            
             <p link="Brown" vlink="Brown" alink="Brown"><a href="./index.html" >About Us</a></p>
 
-
+            <br>
         </font>
     </body>
 </html>
