--- a/templates/index.html
+++ b/templates/index.html
@@ -3,19 +3,34 @@
         <title>About Us</title>
     </head>
 
-    <body bgcolor="Snow" link="tomato" vlink="tomato" alink="tomato">
-        <font face="Verdana">
+    <body bgcolor="PaleTurquoise" link="DarkBlue" vlink="DarkBlue" alink="DarkBlue">
+        <font face="Tw Cen MT" color="FireBrick" size="5">
 
             <h1>About Us</h1>
 
             <p>
             We are 'TechGuys'. We belong to the class VII Kalam. We are also a part of 'Techno Wizard' club. The team comprises of the following members:
-            <h5>Team members</h5>
-            <ol type="I">
-                <li>Ved Patel (Roll No. 40)</li>
-                <li>Vansh Jain (Roll No. 39)</li>
-                <li>Nimish Sharma (Roll No. 23)</li>
-            </ol>
+            <h4><u><i>Team members:</i></u></h4>
+            
+                <p>
+                    <img src="../static/AR.jpg" width="250px"><br>
+                    Ved Patel
+                </p>
+                <br><br>
+
+                <p>
+                    <img src="../static/AR.jpg" width="250px"><br>
+                    Vansh Jain
+                </p>
+                <br><br>
+
+                <p>
+                    <img src="../static/AR.jpg" width="250px"><br>
+                    Nimish Sharma
+                </p>
+                <br><br>
+
+            
 
             We are keen and enthusiastic about new upcoming technologies and their functioning. Immersive technologies are starting to become a part of our life. Our project imparts a brief knowledge about the existing and upcoming immersive technologies. Immersive technologies comprises of Augmented Reality (AR), Virtual Reality (VR) and Mixed Reality.
 
