--- a/templates/mr.html
+++ b/templates/mr.html
@@ -3,8 +3,8 @@
         <title>Mixed Reality</title>
     </head>
 
-    <body bgcolor="Snow" link="tomato" vlink="tomato" alink="tomato">
-        <font face="Verdana">
+    <body bgcolor="PaleTurquoise" link="DarkBlue" vlink="DarkBlue" alink="DarkBlue">
+        <font face="Tw Cen MT" color="FireBrick" size="5">
 
             <center>
                 <h1>Mixed Reality</h1>
@@ -44,9 +44,8 @@
                 <li>Magic Leap One headset</li>
             </ul>
 
+            <br>
             <p><a href="./home.html">Back to home page</a></p>
-
-            <p><a href="./vr.html">Previous page (Virtual Reality)</a></p>
             
         </font>
     </body>
