--- a/templates/vr.html
+++ b/templates/vr.html
@@ -3,8 +3,8 @@
         <title>Virtual Reality</title>
     </head>
 
-    <body bgcolor="Snow" link="tomato" vlink="tomato" alink="tomato">
-        <font face="Verdana">
+    <body bgcolor="PaleTurquoise" link="DarkBlue" vlink="DarkBlue" alink="DarkBlue">
+        <font face="Tw Cen MT" color="FireBrick" size="5">
 
             <center>
                 <h1>Virtual Reality</h1>
@@ -48,9 +48,8 @@
                 
             </p>
 
-            <p><a href="./mr.html">Next page (Virtual Reality)</a></p>
-            
-            <p><a href="./ar.html">Previous page (Augmented Reality)</a></p>
+            <br>
+            <p><a href="./home.html">Back to home page</a></p>
 
         </font>
     </body>
